# strava-analysis

./: Makefile  README.md  entrypoint.sh  ideas.md  main.py  pyproject.toml  tests.ipynb
dashboard/: activity_data_helpers.py  athlete_data_helpers.py  dashboard.py  text_helpers.py
ddl/: 01_create_bronze_table.sql  02_create_silver_table.sql  02_create_silver_tables.sql
jobs/: job1_bronze.py  job2_silver.py
scripts/: seed_bronze.py
util/: db_connection.py  logger_setup.py  strava_client_interface.py
